package data;

public class Categoria {
    private String id;
    private String nome;
    private String descricao;

    public Categoria(String id, String nome, String descricao) {
        this.id = id;
        this.nome = nome;
        this.descricao = descricao;
    }
}
