package data;

public class Regiao {
    private String id;
    private String nome;
    private String estado;
    private String descricao;

    public Regiao(String id, String nome, String estado, String descricao) {
        this.id = id;
        this.nome = nome;
        this.estado = estado;
        this.descricao = descricao;
    }
}
